--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -9,18 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@celo/identity": "^5.0.4",
+    "@celo/identity": "^5.1.1",
+    "@celo/phone-number-privacy-common": "^3.1.1",
     "@celo/rainbowkit-celo": "^1.1.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
-    "@rainbow-me/rainbowkit": "^1.1.3",
-    "ethers": "^6.8.0",
-    "next": "13.5.6",
-    "next-auth": "^4.24.3",
+    "@rainbow-me/rainbowkit": "^1.3.0",
+    "ethers": "^6.9.0",
+    "next": "14.0.4",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
-    "viem": "^1.16.6",
-    "wagmi": "^1.4.5"
+    "viem": "^1.19.11",
+    "wagmi": "^1.4.10"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -28,7 +29,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "eslint": "^8",
-    "eslint-config-next": "13.5.6",
+    "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5"
